--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       top: 0; left: 0; width: 100vw; height: 100vh;
       background: url('cork_city_hall_night.jpg') center center/cover no-repeat;
       z-index: 0;
-      display: none;
+      display: block;
     }
     #loginBgOverlay {
       position: fixed;
       top: 0; left: 0; width: 100vw; height: 100vh;
       background: rgba(30,30,30,0.45);
       z-index: 1;
-      display: none;
+      display: block;
     }
     .login-card {
       background: #fff;
