--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <style>
     body {
       background: none !important;
+      background-color: transparent !important;
       font-family: 'Segoe UI', 'Roboto', Arial, sans-serif;
       min-height: 100vh;
       margin: 0;
@@ -175,6 +176,10 @@
     }
     .hide {
       display: none !important;
+    }
+    body, .container {
+      background: none !important;
+      background-color: transparent !important;
     }
   </style>
 </head>
