--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
     #loginBg {
       position: fixed;
       top: 0; left: 0; width: 100vw; height: 100vh;
-      background: red !important;
+      background: url('cork_city_hall_night.jpg') center center/cover no-repeat;
       z-index: -1;
       display: block !important;
       opacity: 1 !important;
-      border: 5px solid yellow !important;
     }
     #loginBgOverlay {
       position: fixed;
@@ -187,7 +186,7 @@
 </head>
 <body>
   <!-- LOGIN PAGE HEADER -->
-  <div id="loginBg" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:-1;background:red !important;opacity:1;display:block !important;border:5px solid yellow;"></div>
+  <div id="loginBg"></div>
   <div id="loginBgOverlay"></div>
   <div class="container d-flex align-items-center justify-content-center" style="min-height:100vh; position:relative; z-index:2; background:transparent;" id="loginContainer">
     <div class="login-card">
@@ -1349,7 +1348,6 @@
         document.getElementById('loginBg').style.display = 'block';
         document.getElementById('loginBg').style.zIndex = '-1';
         document.getElementById('loginBg').style.opacity = '1';
-        document.getElementById('loginBg').style.background = 'red'; // Force red for debug
       }
     });
   </script>
