--- a/index.html
+++ b/index.html
@@ -2661,6 +2661,10 @@ function updateSummary() {
 function filterFromSummary(status) {
   console.log('filterFromSummary: Filtering by status:', status);
   
+  // Debug: Log all unique statuses in gullyData
+  const uniqueStatuses = [...new Set(gullyData.filter(g => g.layer === 'gullies').map(g => g.status || 'Unmarked'))];
+  console.log('filterFromSummary: Available statuses in gullyData:', uniqueStatuses);
+  
   // Close the summary popup
   const backdrop = document.querySelector('.modal-backdrop-custom');
   if (backdrop) {
@@ -2676,39 +2680,51 @@ function filterFromSummary(status) {
 
 // Function to apply status filter
 function applyStatusFilter(selectedStatus) {
-  // Hide all markers first
-  gullyData.forEach(gully => {
-    if (gully.layer === 'gullies' && gully.marker && typeof gully.marker.setOpacity === 'function') {
+  console.log(`applyStatusFilter: Starting filter for status: ${selectedStatus}`);
+  console.log(`applyStatusFilter: Total gullies in gullyData: ${gullyData.length}`);
+  
+  let visibleCount = 0;
+  let hiddenCount = 0;
+  
+  // Process all gullies
+  gullyData.forEach((gully, index) => {
+    if (gully.layer === 'gullies' && gully.marker) {
       try {
-        gully.marker.setOpacity(0.2);
+        if (selectedStatus === 'All') {
+          // Show all gullies
+          if (typeof gully.marker.setOpacity === 'function') {
+            gully.marker.setOpacity(1);
+          }
+          if (typeof gully.marker.setStyle === 'function') {
+            gully.marker.setStyle({ opacity: 1, fillOpacity: 1 });
+          }
+          visibleCount++;
+        } else {
+          // Show only matching status
+          if (gully.status === selectedStatus) {
+            if (typeof gully.marker.setOpacity === 'function') {
+              gully.marker.setOpacity(1);
+            }
+            if (typeof gully.marker.setStyle === 'function') {
+              gully.marker.setStyle({ opacity: 1, fillOpacity: 1 });
+            }
+            visibleCount++;
+          } else {
+            // Hide non-matching gullies
+            if (typeof gully.marker.setOpacity === 'function') {
+              gully.marker.setOpacity(0.05); // Almost invisible
+            }
+            if (typeof gully.marker.setStyle === 'function') {
+              gully.marker.setStyle({ opacity: 0.05, fillOpacity: 0.05 });
+            }
+            hiddenCount++;
+          }
+        }
       } catch (error) {
-        console.warn('Error setting marker opacity:', error);
+        console.warn(`Error processing gully ${index}:`, error);
       }
     }
   });
-  
-  // Show markers that match the filter
-  if (selectedStatus === 'All') {
-    gullyData.forEach(gully => {
-      if (gully.layer === 'gullies' && gully.marker && typeof gully.marker.setOpacity === 'function') {
-        try {
-          gully.marker.setOpacity(1);
-        } catch (error) {
-          console.warn('Error setting marker opacity:', error);
-        }
-      }
-    });
-  } else {
-    gullyData.forEach(gully => {
-      if (gully.layer === 'gullies' && gully.status === selectedStatus && gully.marker && typeof gully.marker.setOpacity === 'function') {
-        try {
-          gully.marker.setOpacity(1);
-        } catch (error) {
-          console.warn('Error setting marker opacity:', error);
-        }
-      }
-    });
-  }
   
   // Update any existing filter dropdown
   const filterStatus = document.getElementById('filterStatus');
@@ -2716,7 +2732,12 @@ function applyStatusFilter(selectedStatus) {
     filterStatus.value = selectedStatus;
   }
   
-  console.log(`applyStatusFilter: Applied filter for status: ${selectedStatus}`);
+  console.log(`applyStatusFilter: Filter complete. Visible: ${visibleCount}, Hidden: ${hiddenCount}`);
+  
+  // Check and log the actual filter state
+  setTimeout(() => {
+    checkFilterState();
+  }, 100);
 }
 
 // Function to show filter notification
@@ -2728,32 +2749,54 @@ function showFilterNotification(status) {
     top: 20px;
     right: 20px;
     z-index: 10000;
-    min-width: 200px;
+    min-width: 250px;
     padding: 10px 15px;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.2);
   `;
   
   const filterText = status === 'All' ? 'All gullies' : `${status} gullies`;
+  const clearButton = status !== 'All' ? '<button type="button" class="btn btn-sm btn-outline-secondary ms-2" onclick="clearFilter()">Clear Filter</button>' : '';
+  
   notification.innerHTML = `
     <strong>Filter Applied:</strong> ${filterText}
+    ${clearButton}
     <button type="button" class="btn-close ms-2" onclick="this.parentElement.remove()"></button>
   `;
   
   document.body.appendChild(notification);
   
-  // Auto-remove after 3 seconds
+  // Auto-remove after 5 seconds (increased time to allow for clear button)
   setTimeout(() => {
     if (notification.parentElement) {
       notification.remove();
     }
-  }, 3000);
+  }, 5000);
 }
 
 // Function to clear current filter
 function clearFilter() {
+  console.log('clearFilter: Clearing current filter');
   applyStatusFilter('All');
   showFilterNotification('All');
+}
+
+// Function to check current filter state
+function checkFilterState() {
+  const visibleGullies = gullyData.filter(g => 
+    g.layer === 'gullies' && 
+    g.marker && 
+    (g.marker.options?.opacity > 0.5 || g.marker._opacity > 0.5)
+  );
+  
+  const statusCounts = {};
+  visibleGullies.forEach(g => {
+    const status = g.status || 'Unmarked';
+    statusCounts[status] = (statusCounts[status] || 0) + 1;
+  });
+  
+  console.log('checkFilterState: Currently visible gullies by status:', statusCounts);
+  return statusCounts;
 }
 
 // Update the filter functionality (for dropdown)
