--- a/index.html
+++ b/index.html
@@ -456,50 +456,82 @@
         left: 50%;
         transform: translate(-50%, -50%);
         background: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+        padding: 24px;
+        border-radius: 12px;
+        box-shadow: 0 8px 32px rgba(0,0,0,0.15);
         z-index: 2000;
-        max-width: 80%;
-        max-height: 80vh;
+        max-width: 90%;
+        max-height: 85vh;
         overflow-y: auto;
+        border: 1px solid #e0e0e0;
     }
 
     .summary-header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 15px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid #eee;
+        margin-bottom: 20px;
+        padding-bottom: 16px;
+        border-bottom: 2px solid #f0f0f0;
     }
 
     .summary-content {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .status-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 15px;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 16px;
+        margin-top: 10px;
+    }
+
+    .status-item {
+        min-height: 160px;
     }
 
     .status-card {
-        background: #f5f5f5;
-        padding: 15px;
-        border-radius: 6px;
-        border-left: 4px solid;
-        transition: all 0.2s ease;
-        border: 2px solid transparent;
+        background: white;
+        border-radius: 8px;
+        border: 1px solid #e0e0e0;
+        transition: all 0.3s ease;
+        height: 100%;
+        position: relative;
+        overflow: hidden;
     }
 
     .status-card:hover {
-        transform: scale(1.02);
-        box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        transform: translateY(-2px);
+        box-shadow: 0 6px 12px rgba(0,0,0,0.15);
         border-color: #007bff;
     }
 
-    .status-count {
-        font-size: 24px;
-        font-weight: bold;
-        margin: 5px 0;
+    .status-card .card-body {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
     }
+
+    .status-count {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin: 8px 0;
+    }
+
+    .status-description {
+        font-size: 0.85rem;
+        line-height: 1.4;
+        flex-grow: 1;
+    }
+
+    .status-icon {
+        border: 2px solid white;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+    }
+
+
 
     .status-description {
         font-size: 0.9em;
@@ -3007,48 +3039,68 @@ function showSummaryPopup() {
   });
 
   // Create popup HTML
-  let html = `<div class="summary-header d-flex justify-content-between align-items-center mb-3">
-      <h2 class="m-0">Gully Inspection Summary</h2>
-      <button class="btn btn-secondary" onclick="closeModal()">✖ Close</button>
+  let html = `
+    <div class="summary-header d-flex justify-content-between align-items-center mb-4">
+      <div class="d-flex align-items-center">
+        <i class="bi bi-bar-chart-fill text-primary me-2" style="font-size: 1.5rem;"></i>
+        <h2 class="m-0 fw-bold">Gully Inspection Summary</h2>
+      </div>
+      <button class="btn btn-outline-secondary btn-sm" onclick="closeModal()" title="Close">
+        <i class="bi bi-x-lg"></i>
+      </button>
     </div>
+    
     <div class="summary-content">
-      <div class="mb-3">
-        <button class="btn btn-primary w-100" onclick="filterFromSummary('All')">
-          <i class="bi bi-eye"></i> Show All Gullies
+      <div class="mb-4">
+        <button class="btn btn-primary w-100 py-2" onclick="filterFromSummary('All')">
+          <i class="bi bi-eye-fill me-2"></i> Show All Gullies
         </button>
       </div>
-      <div>
-        <div class="status-card card p-3 mb-2 text-center">
-          <h3 class="mb-2">Total Gullies</h3>
-          <div class="status-count">${summary.total}</div>
-          <div class="status-description">Total number of gullies in the system</div>
+      
+      <div class="mb-4">
+        <div class="status-card card p-3 text-center border-primary">
+          <div class="d-flex align-items-center justify-content-center mb-2">
+            <i class="bi bi-collection-fill text-primary me-2" style="font-size: 1.2rem;"></i>
+            <h3 class="m-0 fw-bold">Total Gullies</h3>
+          </div>
+          <div class="status-count text-primary">${summary.total}</div>
+          <div class="status-description text-muted">Total number of gullies in the system</div>
         </div>
       </div>
-      ${Object.entries(summary)
-        .filter(([status]) => status !== 'total')
-        .map(([status, count]) => `
-          <div>
-            <div class="status-card card p-3 mb-2 text-center" 
-                 style="border-left: 4px solid ${getStatusColor(status)}; cursor: pointer; transition: all 0.2s ease;"
-                 onclick="filterFromSummary('${status}')"
-                 onmouseover="this.style.transform='scale(1.02)'; this.style.boxShadow='0 4px 8px rgba(0,0,0,0.2)'"
-                 onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 2px 4px rgba(0,0,0,0.1)'">
-              <h3 class="mb-2">${status}</h3>
-              <div class="status-count">${count}</div>
-              <div class="status-description">${{
-                Clear: 'Gullies that are clean and functioning properly',
-                Blocked: 'Gullies that are obstructed and need cleaning',
-                Broken: 'Gullies that are damaged and not functioning',
-                Remediation: 'Gullies that require maintenance work',
-                Replacement: 'Gullies that need to be completely replaced',
-                Unmarked: 'Gullies that have not been inspected yet'
-              }[status] || ''}</div>
-              <div class="mt-2">
-                <small class="text-muted">Click to filter map</small>
+      <div class="status-grid">
+        ${Object.entries(summary)
+          .filter(([status]) => status !== 'total')
+          .map(([status, count]) => `
+            <div class="status-item">
+              <div class="status-card card h-100 text-center" 
+                   style="border-left: 4px solid ${getStatusColor(status)}; cursor: pointer; transition: all 0.3s ease;"
+                   onclick="filterFromSummary('${status}')"
+                   onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 12px rgba(0,0,0,0.15)'"
+                   onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 4px rgba(0,0,0,0.1)'">
+                <div class="card-body p-3">
+                  <div class="d-flex align-items-center justify-content-center mb-2">
+                    <div class="status-icon me-2" style="background-color: ${getStatusColor(status)}; width: 12px; height: 12px; border-radius: 50%;"></div>
+                    <h4 class="m-0 fw-bold">${status}</h4>
+                  </div>
+                  <div class="status-count fw-bold" style="color: ${getStatusColor(status)}; font-size: 1.5rem;">${count}</div>
+                  <div class="status-description text-muted small mb-2">${{
+                    Clear: 'Clean and functioning properly',
+                    Blocked: 'Obstructed and need cleaning',
+                    Broken: 'Damaged and not functioning',
+                    Remediation: 'Require maintenance work',
+                    Replacement: 'Need to be completely replaced',
+                    Unmarked: 'Have not been inspected yet'
+                  }[status] || ''}</div>
+                  <div class="mt-auto">
+                    <small class="text-primary fw-semibold">
+                      <i class="bi bi-funnel me-1"></i>Click to filter
+                    </small>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-        `).join('')}
+          `).join('')}
+      </div>
     </div>`;
 
   // Create backdrop
@@ -3060,11 +3112,8 @@ function showSummaryPopup() {
 
   // Create modal
   const modal = document.createElement('div');
-  modal.className = 'summary-popup card shadow p-4';
+  modal.className = 'summary-popup';
   modal.innerHTML = html;
-  modal.style.maxWidth = '98vw';
-  modal.style.maxHeight = '90vh';
-  modal.style.overflow = 'auto';
 
   backdrop.appendChild(modal);
   document.body.appendChild(backdrop);
