--- a/index.html
+++ b/index.html
@@ -4519,7 +4519,7 @@ async function performSearch() {
       `;
       return;
     }
-  }
+  } else {
     const resultsHTML = results.map(result => {
       // Create a comprehensive info line
       const infoItems = [];
